--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "serve": "webpack-dev-server --open",
+    "linter": "eslint .",
     "test": "mocha --opts ./test/config/mocha.opts ./test/*.spec.js"
   },
   "keywords": [
@@ -14,15 +15,20 @@
     "remote-control"
   ],
   "author": "jbaudin",
-  "license": "ISC",
+  "license": "MIT",
+  "dependencies": {
+    "sw-precache": "^5.2.0",
+    "webpack": "2.x - 3.x"
+  },
   "devDependencies": {
     "chai": "^4.0.2",
+    "eslint": "^4.1.1",
+    "eslint-config-travix": "^2.3.2",
+    "eslint-plugin-import": "^2.6.1",
     "mocha": "^3.4.2",
     "mocha-sinon": "^2.0.0",
     "proxyquire": "^1.8.0",
     "sinon": "^2.3.6",
-    "sw-precache": "^5.2.0",
-    "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0"
   }
 }
