--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "poc-service-workers",
+  "name": "sw-bundler-plugin",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
