--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "poc-service-workers",
+  "name": "sw-bundler-plugin",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "webpack-dev-server --open",
-    "linter": "eslint .",
+    "start": "webpack-dev-server --open",
+    "lint": "eslint .",
     "test": "mocha --opts ./test/config/mocha.opts ./test/*.spec.js"
   },
   "keywords": [
